# jordan-quillen

./: .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  environment.yml  pyproject.toml
codex/: local-math-tools.md  review-checklist.md
experiments/: README.md
formal/: README.md
note/: personal-notes.tex
notebooks/: README.md  derivations_small_examples.ipynb  jordan_identity_linearization.ipynb  tkk_small_examples.ipynb
paper/: macros.tex  main.tex  preamble.tex
researchplan/: subplan001.md  subplan002.md  subplan005.md  subplan006.md  subplan007.md  subplan009.md  subplan010.md  subplan011.md  subplan012.md  subplan013.md  subplan014.md  subplan100.md  subplan101.md
scripts/: check_claims.py  export_results.py  make_literature_index.py  run_all_experiments.py
tests/: test_algebras.py  test_derivations.py  test_examples.py  test_exp009_square_zero_two_generator.py  test_exp010_h1_presentation_stress.py  test_exp011_v2_cells_no_q.py  test_exp012_high_weight_rank_backend_validation.py  test_exp013_strict_attachability_killing_audit.py  test_exp014_backend_ideal_audit.py  test_exp100_one_generator_cofibrant.py  test_exp101_one_generator_generator_legality.py  test_identities.py  test_indecomposables.py  test_modules.py  test_omega.py  test_quillen_toy.py  test_semi_free_toy_j3.py  test_square_zero_extensions.py
theory/: 00-conventions.md  01-jordan-algebras.md  02-operadic-setup.md  03-abelianization.md  04-beck-modules.md  05-derivations-and-omega.md  06-cotangent-complex.md  07-transitivity-and-base-change.md  08-low-degree-interpretation.md  (+4 more)
(+321 files in other folders)
